apps/invidious/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: invidious
  labels:
    name: invidious
